Solved some broken interface
after changes in flex to grid, solving some issuesl

--- a/style.css
+++ b/style.css
@@ -17,14 +17,17 @@ body{
     background-color: black;
     display: grid;
     color: white;
-    grid-template-columns: 10% 30% 30% 25% 25%;
-    grid-template-rows: 20% 15% 17.5% 17.5% 7.5% 7.5% 15%;
+    width: 100vw;
+    aspect-ratio: 16/9;
+    grid-template-columns: 10fr 30fr 30fr 25fr 25fr;
+    grid-template-rows: 30fr 15fr 12.5fr 12.5fr 7.5fr 7.5fr 15fr;
 }
 
 
 /* rpm bar styles */
 
 #rpm{
+    height: 100%;
     padding: 0.25rem;
     display: flex;
     flex-direction: row;
@@ -34,18 +37,20 @@ body{
     grid-column: 1/6;
     grid-row: 1/2;
 }
+
 #rpm #rpmgauge{
-    width: 80%;
-    height: 100%;
-    
-    background-color: rgb(0, 0, 0);
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    background-image: url("/img/rpmScale.png");
 }
 
 #rpm #rpmgauge #shiftbar{
-    padding-top: 0.125rem;
-    padding-bottom: 0.125rem;
-    margin-top: 0.25rem;
-    margin-left: 0.25rem;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+    margin-top: 1.5%;
+    margin-left: 1.5%;
     background-image: linear-gradient(to left, yellow, yellow);
     text-align: right;
     color: black;
@@ -56,68 +61,8 @@ body{
     z-index: 10;
 }
 
-#rpm #rpmgauge #scale {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction:column;
-    justify-content: center;
-    position: relative;
-    top: -0.5rem;
 
-}
 
-#rpm #rpmgauge #scale #step{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
-    
-}
-#rpm #rpmgauge #scale #step span{
-    height: 10px;
-    width: 100%;
-
-    border-bottom: 2px;
-    border-left: 2px;
-    border-right: 1px;
-    border-style: solid;
-    border-color: white; 
-    font-size: 10pt;
-
-}
-
-#rpm #rpmgauge #scale #step .redline{
-
-    border-color:red;
-    
-}
-
-#rpm #rpmgauge #scale #values{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    font-size: 10pt;
-    color:white;
-    font-family:Abel;
-    
-}
-
-#rpm #rpmgauge #scale #values .redline{
-
-    color:red;
-    
-}
-
-#rpm #rpmgauge #scale #values span{
-    width: 100%;
-    text-align: right;
-    border-bottom: 2px;
-    border-left: 1px;
-    border-right: 1px;
-    font-size: 10pt;
-
-}
 #rpm #rpmcounter{
     text-align: right;
     font-family:Abel;
@@ -179,7 +124,8 @@ body{
 /*timing meter style*/
 
 #timing{
-    
+    display: flex;
+    flex-direction: row;
     padding: 1vw;
     border: solid white 0.25vw;
     margin: 0.5vw;
